2013-05-29  Andy Buckley  <andy.buckley@cern.ch>

	* Removing Constraints.hh header.

	* Minor bugfixes and improvements in Scatter2D booking and MC_JetAnalysis.

2013-05-28  Andy Buckley  <andy.buckley@cern.ch>

	* Removing defunct HistoFormat.hh and HistoHandler.{hh,cc}

2013-05-27  Andy Buckley  <andy.buckley@cern.ch>

	* Removing includes of Logging.hh, RivetYODA.hh, and
	ParticleIdUtils.hh from analyses (and adding an include of
	ParticleIdUtils.hh to Analysis.hh)

	* Removing now-unused .fhh files.

	* Removing lots of unnecessary .fhh includes from core classes:
	everything still compiling ok. A good opportunity to tidy this up
	before the release.

	* Moving the rivet-completion script from the data dir to bin (the
	completion is for scripts in bin, and this makes development
	easier).

	* Updating bash completion scripts for YODA format and
	compare-histos -> rivet-cmphistos.

2013-05-23  Andy Buckley  <andy.buckley@cern.ch>

	* Adding Doxy comments and a couple of useful convenience functions to Utils.hh.

	* Final tweaks to ATLAS ttbar jet veto analysis (checked logic with Kiran Joshi).

2013-05-15  Andy Buckley  <andy.buckley@cern.ch>

	* Many 1.0 -> weight bugfixes in ATLAS_2011_I945498.

	* yaml-cpp v3 support re-introduced in .info parsing.

	* Lots of analysis clean-ups for YODA TODO issues.

2013-05-13  Andy Buckley  <andy.buckley@cern.ch>

	* Analysis histo booking improvements for Scatter2D, placeholders
	for 2D histos, and general tidying.

2013-05-12  Andy Buckley  <andy.buckley@cern.ch>

	* Adding configure-time differentiation between yaml-cpp API versions 3 and 5.

2013-05-07  Andy Buckley  <andy.buckley@cern.ch>

	* Converting info file reading to use the yaml-cpp 0.5.x API.

2013-04-12  Andy Buckley  <andy.buckley@cern.ch>

	* Tagging as 2.0.0b1

2013-04-04  Andy Buckley  <andy.buckley@cern.ch>

	* Removing bundling of yaml-cpp: it needs to be installed by the
	user / bootstrap script from now on.
