@@ -18,20 +18,14 @@ namespace Rivet {
 
   // Book histograms
   void MC_JetSplittings::init() {
-
-    for (size_t i=0; i < m_njet; ++i) {
-      stringstream dname;
-      dname << "log10_d_" << i << i+1;
-
-      _h_log10_d[i] = bookHisto1D(dname.str(), 100, 0.2, log10(0.5*sqrtS()));
-
-      stringstream Rname;
-      Rname << "log10_R_" << i;
-      _h_log10_R[i] = bookScatter2D(Rname.str(), 50, 0.2, log10(0.5*sqrtS()));
+    for (size_t i = 0; i < m_njet; ++i) {
+      string dname = "log10_d_" + to_str(i) + to_str(i+1);
+      _h_log10_d[i] = bookHisto1D(dname, 100, 0.2, log10(0.5*sqrtS()));
+      string Rname = "log10_R_" + to_str(i);
+      _h_log10_R[i] = bookScatter2D(Rname, 50, 0.2, log10(0.5*sqrtS()));
     }
-    stringstream Rname;
-    Rname << "log10_R_" << m_njet;
-    _h_log10_R[m_njet] = bookScatter2D(Rname.str(), 50, 0.2, log10(0.5*sqrtS()));
+    string Rname = "log10_R_" + to_str(m_njet);
+    _h_log10_R[m_njet] = bookScatter2D(Rname, 50, 0.2, log10(0.5*sqrtS()));
   }
 
 
@@ -56,6 +50,7 @@ namespace Rivet {
         // Fill integrated jet resolution
         for (size_t ibin = 0; ibin < _h_log10_R[i]->numPoints(); ++ibin) {
           Point2D & dp = _h_log10_R[i]->point(ibin);
+          /// @todo Could inRange be used here (avoiding the temporary variable)?
           double dcut = dp.x();
           if (d_ij < dcut && previous_dij > dcut) {
             dp.setY(dp.y() + weight);
